--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,10 @@
   <title>Document</title>
 </head>
 <body>
+
+  <div id="card-container">
+    
+  </div>
   
   <script type="application/javascript" src="src/index.js"></script>
 </body>
