HTML form for Cards

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,8 +7,21 @@
 </head>
 <body>
 
+  <div class="form-container">
+    <form id="create-card-form">
+      <h3>Create a flash card:</h3>
+
+      <input id="input-question" type="text" name="question">
+      <br>
+      <input id="input-answer" type="text" name="answer">
+      <br>
+
+      <input id="create-button" type="submit" name="submit" value="Create Card" class="submit">
+    </form>
+  </div>
+
   <div id="card-container">
-    
+
   </div>
   
   <script type="application/javascript" src="src/index.js"></script>
