Divs to use as anchors

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 
+  <div class="collection-choice">
+  </div>
+
   <div class="form-container">
     <form id="create-card-form">
       <h3>Create a flash card:</h3>
@@ -21,7 +24,9 @@
   </div>
 
   <div id="card-container">
-
+    <div id="card-display">
+      <p id="question-display"></p>
+    </div>
   </div>
   
   <script type="application/javascript" src="src/index.js"></script>
