Add card.js and include in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,5 +30,6 @@
   </div>
   
   <script type="application/javascript" src="src/index.js"></script>
+  <script type="application/javascript" src="src/card.js"></script>
 </body>
 </html>
