--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,5 +31,6 @@
   
   <script type="application/javascript" src="src/index.js"></script>
   <script type="application/javascript" src="src/card.js"></script>
+  <script type="application/javascript" src="src/collection.js"></script>
 </body>
 </html>
