Add Collection name, answer input, and submit bttn

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,10 @@
 
   <div id="card-container">
     <div id="card-display">
+      <h2 id="collection-name"></h2>
       <p id="question-display"></p>
+      <input id="user-answer" type="text" placeholder="Your Answer">
+      <button id="submit-answer" type="submit">SUBMIT</button>
     </div>
   </div>
   
