Add scoreboard to HTML

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,17 @@
     <div id="card-display">
     </div>
   </div>
+
+  <div id="scoreboard">
+    <h3 id="scoreboard-header"></h3>
+    <div id="score">
+      <p id="question-number"
+      <p id="display-score"></p>
+    </div>
+    <div id="timer">
+      
+    </div>
+  </div>
   
   <script type="application/javascript" src="src/index.js"></script>
   <script type="application/javascript" src="src/card.js"></script>
