--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,11 +27,12 @@
     <div id="card-display">
     </div>
   </div>
-
+  
+  <p id="question-number"></p>
+  
   <div id="scoreboard">
     <h3 id="scoreboard-header"></h3>
     <div id="score">
-      <p id="question-number"
       <p id="display-score"></p>
     </div>
     <div id="timer">
