Change card-container to collection-container

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
       </form>
     </div>
 
-    <div class="card-container container">
+    <div class="collection-container container">
       <div id="card-display">
       </div>
     </div>
