Add labels for form inputs

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,10 +17,11 @@
 
     <div class="form-container container">
       <form id="create-card-form">
-        <h3>Create a flash card:</h3>
-
+        <h2>Create a flash card:</h2>
+        <label for="input-question">Question:</label>
         <input id="input-question" type="text" name="question">
         <br>
+        <label for="input-answer">Answer:</label>
         <input id="input-answer" type="text" name="answer">
         <br>
 
