--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,14 +31,16 @@
     <div class="form-container container">
       <form id="create-card-form">
         <h2>Create a flash card:</h2>
-        <label for="input-question">Question:</label>
-        <input id="input-question" type="text" name="question">
-        <br>
-        <label for="input-answer">Answer:</label>
-        <input id="input-answer" type="text" name="answer">
-        <br>
+          <div class="form-group">
+            <label for="input-question" class="form-control">Question:</label>
+            <input id="input-question" type="text" name="input-question" class="form-control">
+            <br>
+            <label for="input-answer" class="form-control">Answer:</label>
+            <input id="input-answer" type="text" name="input-answer" class="form-control">
+            <br>
 
-        <input id="create-button" type="submit" name="submit" value="Create Card" class="submit">
+            <input id="create-button" type="submit" name="submit" value="Create Card" class="submit form-control">
+          </div>
       </form>
     </div>
 
@@ -47,9 +49,7 @@
         <div class="collection-container col-8">
           <div id="card-display">
             <div id="cardCarousel" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
-              
-              </div>
+              <div class="carousel-inner"></div>
             </div>
           </div>
         </div>
@@ -63,7 +63,6 @@
             <div id="timer"></div>
           </div>
         </div>
-
       </div>
 
     </div>
