Add ApiAdapter class and make get and post instance mthds

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,6 +74,7 @@
   
   <script type="application/javascript" src="src/collection.js"></script>
   <script type="application/javascript" src="src/card.js"></script>
+  <script type="application/javascript" src="src/api.js"></script>
   <script type="application/javascript" src="src/index.js"></script>
   <!-- Bootstrap scripts -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
